force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets02GpfCnt__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets02GpfCnt__c</fullName>
    <description>Number of Existing 0 To 2 GPF Toilets</description>
    <inlineHelpText>Enter the number of existing toilets measuring greater than or equal to 0 and less than 3 GPF (gallons per flush) which will be replaced as part of the project building scope.</inlineHelpText>
    <label>Number of Existing Toilets =&gt;0 &amp; &lt;3 GPF</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>