force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets35Gpf__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets35Gpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing 3 To 5 GPF Toilets</description>
    <inlineHelpText>Select the checkbox if building&apos;s existing toilets measure greater than or equal to 3 and less than 6 GPF (gallons per flush).</inlineHelpText>
    <label>Existing Toilets =&gt;3 GPF and &lt;6 GPF</label>
    <type>Checkbox</type>
</CustomField>