force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets35GpfCnt__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets35GpfCnt__c</fullName>
    <description>Number of Existing 3 To 5 GPF Toilets</description>
    <inlineHelpText>Enter the number of existing toilets measuring greater than or equal to 3 and less than 6 GPF (gallons per flush) which will be replaced as part of the project building scope.</inlineHelpText>
    <label>Number of Existing Toilets =&gt;3 &amp; &lt;6 GPF</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>