force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets4PlusGpf__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets4PlusGpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing 4Plus GPF Urinals</description>
    <inlineHelpText>Enter the number of existing toilets that measure 4 or more GPF (gallons per flush).</inlineHelpText>
    <label>4 Plus GPF</label>
    <type>Checkbox</type>
</CustomField>