force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets4PlusGpfCnt__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets4PlusGpfCnt__c</fullName>
    <description>Number of Existing 4Plus GPF Urinals</description>
    <inlineHelpText>Enter the number of existing urinals measuring greater than or equal to 4 GPF (gallons per flush) which will be replaced as part of the project building scope.</inlineHelpText>
    <label>Number of Existing Urinals =&gt;4 GPF</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>