force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets68Gpf__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets68Gpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing 6 To 8 GPF Toilets</description>
    <inlineHelpText>Select the checkbox if building&apos;s existing toilets measure greater than or equal to 6 and less than 9 GPF (gallons per flush).</inlineHelpText>
    <label>Existing Toilets =&gt;6 GPF and &lt;9 GPF</label>
    <type>Checkbox</type>
</CustomField>