force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets68GpfCnt__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets68GpfCnt__c</fullName>
    <description>Number of Existing 6 To 8 GPF Toilets</description>
    <inlineHelpText>Enter the number of existing toilets measuring greater than or equal to 6 and less than 9 GPF (gallons per flush) which will be replaced as part of the project building scope.</inlineHelpText>
    <label>Number of Existing Toilets =&gt;6 &amp; &lt;9 GPF</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>