force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets9PlusGpf__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets9PlusGpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing 9Plus GPF Toilets</description>
    <inlineHelpText>Select the checkbox if building&apos;s existing toilets measure greater than or equal to 9 GPF (gallons per flush).</inlineHelpText>
    <label>Existing Toilets =&gt;9 GPF</label>
    <type>Checkbox</type>
</CustomField>