force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets9PlusGpfCnt__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets9PlusGpfCnt__c</fullName>
    <description>Number of Existing 9Plus GPF Toilets</description>
    <inlineHelpText>Enter the number of existing toilets measuring greater than or equal to 9 GPF (gallons per flush) which will be replaced as part of the project building scope.</inlineHelpText>
    <label>Number Existing Toilets =&gt;9 GPF</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>