force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistUrinals0Pt5Gpf__c.field-meta.xml
<CustomField>
    <fullName>ExistUrinals0Pt5Gpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing 0 To _5 GPF Urinals</description>
    <inlineHelpText>Select the checkbox if building&apos;s existing urinals measure greater than or equal to 0.0 and less than 0.5 GPF (gallons per flush).</inlineHelpText>
    <label>Existing Urinals =&gt;0.0 GPF and &lt;0.5 GPF</label>
    <type>Checkbox</type>
</CustomField>