force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistUrinals0Pt5GpfCnt__c.field-meta.xml
<CustomField>
    <fullName>ExistUrinals0Pt5GpfCnt__c</fullName>
    <description>Number of Existing 0 To _5 GPF Urinals</description>
    <inlineHelpText>Enter the number of existing urinals measuring greater than or equal to 0.0 and less than 0.5 GPF (gallons per flush) which will be replaced as part of the project building scope.</inlineHelpText>
    <label>Number of Existing Urinals &gt;0 &amp; &lt;0.5 GPF</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>