force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistUrinals23Gpf__c.field-meta.xml
<CustomField>
    <fullName>ExistUrinals23Gpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing 2 To 3 GPF Urinals</description>
    <inlineHelpText>Select the checkbox if building&apos;s existing urinals measure greater than or equal to 2 and less than 4 GPF (gallons per flush).</inlineHelpText>
    <label>Existing Urinals =&gt;2 GPF and &lt;4 GPF</label>
    <type>Checkbox</type>
</CustomField>