force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistUrinals23GpfCnt__c.field-meta.xml
<CustomField>
    <fullName>ExistUrinals23GpfCnt__c</fullName>
    <description>Number of Existing 2 To 3 GPF Urinals</description>
    <inlineHelpText>Enter the number of existing urinals measuring greater than or equal to 2 and less than 4 GPF (gallons per flush) which will be replaced as part of the project building scope.</inlineHelpText>
    <label>Number Existing Urinals =&gt;2 and &lt;4 GPF</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>