force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistUrinals4PlusGpf__c.field-meta.xml
<CustomField>
    <fullName>ExistUrinals4PlusGpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing 4Plus GPF Urinals</description>
    <inlineHelpText>Select the checkbox if building&apos;s existing urinals measure greater than or equal to 4 GPF (gallons per flush).</inlineHelpText>
    <label>Existing Urinals =&gt;4 GPF</label>
    <type>Checkbox</type>
</CustomField>