force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistUrinals4PlusGpfCnt__c.field-meta.xml
<CustomField>
    <fullName>ExistUrinals4PlusGpfCnt__c</fullName>
    <description>Number of Existing 4Plus GPF Urinals</description>
    <inlineHelpText>Enter the number of existing urinals measure greater than or equal to 4 GPF (gallons per flush).</inlineHelpText>
    <label>Existing Urinals =&gt;4 GPF</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>