force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistUrinalsPt61Gpf__c.field-meta.xml
<CustomField>
    <fullName>ExistUrinalsPt61Gpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing _6 To 1 GPF Urinals</description>
    <inlineHelpText>Select the checkbox if building&apos;s existing urinals measure greater than or equal to 0.5 and less than 2 GPF (gallons per flush).</inlineHelpText>
    <label>Existing Urinals =&gt;0.5 GPF and &lt;2 GPF</label>
    <type>Checkbox</type>
</CustomField>