force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistUrinalsPt61GpfCnt__c.field-meta.xml
<CustomField>
    <fullName>ExistUrinalsPt61GpfCnt__c</fullName>
    <description>Number of Existing _6 To 1 GPF Urinals</description>
    <inlineHelpText>Enter the number of existing urinals measuring greater than or equal to 0.5 and less than 2 GPF (gallons per flush) which will be replaced as part of the project building scope.</inlineHelpText>
    <label>Number Existing Urinals =&gt;0.5 and &lt;2 GPF</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>