force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/FillRplc__c.field-meta.xml
<CustomField>
    <fullName>FillRplc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox if a fill replacement is included in project building scope.</description>
    <inlineHelpText>Select the checkbox if a fill replacement is included in project building scope.</inlineHelpText>
    <label>Fill Replacement</label>
    <type>Checkbox</type>
</CustomField>