force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/FixedWindows__c.field-meta.xml
<CustomField>
    <fullName>FixedWindows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Fixed Windows</description>
    <inlineHelpText>Select the checkbox if fixed windows are included in project building scope.</inlineHelpText>
    <label>Fixed Windows</label>
    <type>Checkbox</type>
</CustomField>