force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ForDomesticHotWater__c.field-meta.xml
<CustomField>
    <fullName>ForDomesticHotWater__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if For Domestic Hot Water</description>
    <inlineHelpText>Select the checkbox if energy produced from the solar thermal system will be used to heat domestic water.</inlineHelpText>
    <label>Domestic Hot Water Heating</label>
    <type>Checkbox</type>
</CustomField>