force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ForHeat__c.field-meta.xml
<CustomField>
    <fullName>ForHeat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if For Heat</description>
    <inlineHelpText>Select the checkbox if energy produced from the solar thermal system will be used to heat the building spaces.</inlineHelpText>
    <label>Building Space Heating</label>
    <type>Checkbox</type>
</CustomField>