force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/FuelCellsInst__c.field-meta.xml
<CustomField>
    <fullName>FuelCellsInst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Fuel Cells Installation</description>
    <inlineHelpText>Select the checkbox if fuel cells were installed. Fuel cells are devices that convert chemical energy to electricity through a chemical reaction.</inlineHelpText>
    <label>Fuel Cells</label>
    <type>Checkbox</type>
</CustomField>