force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/FuelSource__c.field-meta.xml
<CustomField>
    <fullName>FuelSource__c</fullName>
    <description>Fuel source of Biomass</description>
    <inlineHelpText>Indicate the fuel source of the project&apos;s biomass if included in the scope of the project.</inlineHelpText>
    <label>Fuel Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AgriculturalWaste</fullName>
            </value>
            <value>
                <fullName>AlgaeCulture</fullName>
            </value>
            <value>
                <fullName>Charcoal</fullName>
            </value>
            <value>
                <fullName>DomesticRefuse</fullName>
            </value>
            <value>
                <fullName>GrassCuttings</fullName>
            </value>
            <value>
                <fullName>NonFoodEnergyCrops</fullName>
            </value>
            <value>
                <fullName>Sawdust</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>