force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/FuelType__c.field-meta.xml
<CustomField>
    <fullName>FuelType__c</fullName>
    <description>Please indicate the system&apos;s fuel type:</description>
    <inlineHelpText>Please indicate the system&apos;s fuel type.</inlineHelpText>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BioFuel</fullName>
            </value>
            <value>
                <fullName>DualFuel</fullName>
            </value>
            <value>
                <fullName>NaturalGas</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>