force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/GasCooling__c.field-meta.xml
<CustomField>
    <fullName>GasCooling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Gas Cooling</description>
    <inlineHelpText>Select the checkbox if gas cooling is included in the project building scope. Gas cooling is when natural gas is used to operate a chiller system as opposed to electricity or other means.</inlineHelpText>
    <label>Gas Cooling</label>
    <type>Checkbox</type>
</CustomField>