force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/GasDistributionSysInst__c.field-meta.xml
<CustomField>
    <fullName>GasDistributionSysInst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Gas Distribution Systems Installation</description>
    <inlineHelpText>Select the checkbox if gas distribution systems installation is included in project building scope.</inlineHelpText>
    <label>Gas Distribution System(s)</label>
    <type>Checkbox</type>
</CustomField>