force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/GasoilMeters__c.field-meta.xml
<CustomField>
    <fullName>GasoilMeters__c</fullName>
    <description>Number for Gas/Oil</description>
    <inlineHelpText>Enter the number of advanced meters that will be installed to monitor gas/oil.</inlineHelpText>
    <label>Number of Gas/Oil Meters</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>