force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/GasoilTracked__c.field-meta.xml
<CustomField>
    <fullName>GasoilTracked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for Gas/Oil</description>
    <inlineHelpText>Select the checkbox if the installation of gas/oil advanced meters is included in the project building scope.</inlineHelpText>
    <label>Gas/Oil Meter Installed</label>
    <type>Checkbox</type>
</CustomField>