force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/GlazingGlareCntrl__c.field-meta.xml
<CustomField>
    <fullName>GlazingGlareCntrl__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Glazing Glare Control</description>
    <inlineHelpText>Select checkbox if a glazing glare control strategy/system is included in the project building scope.</inlineHelpText>
    <label>Glazing Glare Control</label>
    <type>Checkbox</type>
</CustomField>