force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/GrayWaterSysInstld__c.field-meta.xml
<CustomField>
    <fullName>GrayWaterSysInstld__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Gray Water System Installed</description>
    <inlineHelpText>Select the checkbox if a gray water system is included in the project building scope.</inlineHelpText>
    <label>Gray Water System</label>
    <type>Checkbox</type>
</CustomField>