force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/HartmanLoop__c.field-meta.xml
<CustomField>
    <fullName>HartmanLoop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Hartman Loop</description>
    <inlineHelpText>Select the checkbox if a Hartman LOOP is included in project building scope.</inlineHelpText>
    <label>Hartman Loop</label>
    <type>Checkbox</type>
</CustomField>