force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/HeatWheel__c.field-meta.xml
<CustomField>
    <fullName>HeatWheel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Heat Wheel</description>
    <inlineHelpText>Select the checkbox if heat wheel is included in project building scope. A heat wheel is a rotating apparatus generally used to reduce the energy consumed by air-conditioning equipment in humid locations.</inlineHelpText>
    <label>Heat Wheel (Enthalpy Wheel)</label>
    <type>Checkbox</type>
</CustomField>