force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/HistoricRoof__c.field-meta.xml
<CustomField>
    <fullName>HistoricRoof__c</fullName>
    <description>Indicate if roof replacement is being done on a historic roof.</description>
    <inlineHelpText>Indicate if roof replacement is being done on a historic roof.</inlineHelpText>
    <label>Historic roof</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>