force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/HotWaterHeaterRepairRplc__c.field-meta.xml
<CustomField>
    <fullName>HotWaterHeaterRepairRplc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Hot water heater repair and replacement</description>
    <inlineHelpText>Select checkbox if the hot water heater will be repaired or replaced as part of the project building scope.</inlineHelpText>
    <label>Hot Water Heater Repair or Replacement</label>
    <type>Checkbox</type>
</CustomField>