force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/HowManyOccSensorsWillBeInstld__c.field-meta.xml
<CustomField>
    <fullName>HowManyOccSensorsWillBeInstld__c</fullName>
    <description>How many occupancy sensors will be installed for the square footage identified above</description>
    <inlineHelpText>How many occupancy sensors will be installed in the square feet entered above?</inlineHelpText>
    <label>Number of Occupancy Sensors Installed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>