force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/Hydrozoning__c.field-meta.xml
<CustomField>
    <fullName>Hydrozoning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Hydrozoning</description>
    <inlineHelpText>Select the checkbox hydrozoning is included in project building scope. Hydrozoning is a landscaping practice in which plants with the same water requirements are grouped together to conserve water.</inlineHelpText>
    <label>Hydrozoning</label>
    <type>Checkbox</type>
</CustomField>