force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/IndustrialProcessImprovement__c.field-meta.xml
<CustomField>
    <fullName>IndustrialProcessImprovement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Industrial Process Improvement</description>
    <inlineHelpText>Select the checkbox if an industrial process improvement is included in project building scope.</inlineHelpText>
    <label>Industrial Process Improvements</label>
    <type>Checkbox</type>
</CustomField>