force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/InstallEfficientSprinklers__c.field-meta.xml
<CustomField>
    <fullName>InstallEfficientSprinklers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Install efficient sprinklers or sprinkler heads</description>
    <inlineHelpText>Select the checkbox if efficient sprinklers or sprinkler heads have been installed.</inlineHelpText>
    <label>Efficient Sprinklers or Heads</label>
    <type>Checkbox</type>
</CustomField>