force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/InstallingAutomatedEms__c.field-meta.xml
<CustomField>
    <fullName>InstallingAutomatedEms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Installing Automated EMS</description>
    <inlineHelpText>Select checkbox if an Automated Energy Management System (EMS) is included in the project building scope.</inlineHelpText>
    <label>Automated Energy Management System (EMS)</label>
    <type>Checkbox</type>
</CustomField>