force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/InstallRainSensingTech__c.field-meta.xml
<CustomField>
    <fullName>InstallRainSensingTech__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Install rain sensing or soil moisture sensing technology</description>
    <inlineHelpText>Select the checkbox if rain sensing or soil moisture sensing technology has been installed.</inlineHelpText>
    <label>Rain/Soil Moisture Sensing Technologies</label>
    <type>Checkbox</type>
</CustomField>