force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/InstallVfdsOnAirHandlerUnits__c.field-meta.xml
<CustomField>
    <fullName>InstallVfdsOnAirHandlerUnits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Install VFDs on Air Handler Units</description>
    <inlineHelpText>Select checkbox if installation of Variable Frequency Drives (VFDs) are included in project building scope.</inlineHelpText>
    <label>Variable Frequency Drives (VFDs)</label>
    <type>Checkbox</type>
</CustomField>