force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/InstType__c.field-meta.xml
<CustomField>
    <fullName>InstType__c</fullName>
    <description>Please indicate if new system installation is part of a full replacement, partial replacement or installation for a new building.</description>
    <inlineHelpText>Please indicate if new system installation is part of a full replacement, partial replacement or installation for a new building.</inlineHelpText>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FullReplacement</fullName>
            </value>
            <value>
                <fullName>InstallationForNewBuilding</fullName>
            </value>
            <value>
                <fullName>PartialReplacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>