force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/InsulationActualRValueInstld__c.field-meta.xml
<CustomField>
    <fullName>InsulationActualRValueInstld__c</fullName>
    <description>Insulation Actual R Value- Installed:</description>
    <inlineHelpText>Please enter the Actual Insulation R-Value (a measure of thermal resistance, the ratio of the temperature difference across an insulator to the heat flux). The R-value is expressed as the thickness of the material divided by the thermal conductivity.</inlineHelpText>
    <label>Actual Insulation R-Value Installed</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>