force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/InsulationInst__c.field-meta.xml
<CustomField>
    <fullName>InsulationInst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Insulation Installation</description>
    <inlineHelpText>Select the checkbox if insulation installation is included in project building scope.</inlineHelpText>
    <label>New/Supplemental Envelope Insulation</label>
    <type>Checkbox</type>
</CustomField>