force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/IntegrateChillerBoilerCntrlSys__c.field-meta.xml
<CustomField>
    <fullName>IntegrateChillerBoilerCntrlSys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Integrate Chiller Boiler with Control System</description>
    <inlineHelpText>Select checkbox if integration of chillers or boilers with the control system is a part of project building scope.</inlineHelpText>
    <label>Chiller/Boiler Integrated w/ BAS</label>
    <type>Checkbox</type>
</CustomField>