force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/IrrigationMeter__c.field-meta.xml
<CustomField>
    <fullName>IrrigationMeter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Irrigation Meter</description>
    <inlineHelpText>Select the checkbox if irrigation meters are included in the project building scope. An irrigation meter separately accounts for water used for irrigation and is not assessed a sewage charge.</inlineHelpText>
    <label>Irrigation Meter</label>
    <type>Checkbox</type>
</CustomField>