force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/IrrigationSmartCntrller__c.field-meta.xml
<CustomField>
    <fullName>IrrigationSmartCntrller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Irrigation Smart Controller</description>
    <inlineHelpText>Select the checkbox if irrigation smart controllers are included in the project building scope. An irrigation smart controller tailors watering schedules and run times to automatically meet specific landscaping needs.</inlineHelpText>
    <label>Irrigation Smart Controller</label>
    <type>Checkbox</type>
</CustomField>