force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/LightingCntrlsInterface__c.field-meta.xml
<CustomField>
    <fullName>LightingCntrlsInterface__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Lighting Controls Interface</description>
    <inlineHelpText>Select the checkbox if lighting controls interface is included in project building scope.</inlineHelpText>
    <label>Lighting Controls Interface</label>
    <type>Checkbox</type>
</CustomField>