force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/LightingTypeBaseline__c.field-meta.xml
<CustomField>
    <fullName>LightingTypeBaseline__c</fullName>
    <description>Lighting Type Baseline dropdown</description>
    <inlineHelpText>Please indicate the building&apos;s existing predominant lighting type which will be replaced as part of the project.</inlineHelpText>
    <label>Existing Predominant Lighting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halogen</fullName>
            </value>
            <value>
                <fullName>HighLowPressureSodium</fullName>
            </value>
            <value>
                <fullName>Incandescent</fullName>
            </value>
            <value>
                <fullName>T12</fullName>
            </value>
            <value>
                <fullName>T8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>