force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/LightShelves__c.field-meta.xml
<CustomField>
    <fullName>LightShelves__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Light Shelves</description>
    <inlineHelpText>Select checkbox if light shelves are included in project building scope.</inlineHelpText>
    <label>Light Shelves</label>
    <type>Checkbox</type>
</CustomField>