force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/LoadSheddingProgrammingUtilityRebate__c.field-meta.xml
<CustomField>
    <fullName>LoadSheddingProgrammingUtilityRebate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Load Shedding Programming with Utility Rebate</description>
    <inlineHelpText>Select the checkbox if load shedding programming with utility rebate is included in project building scope.</inlineHelpText>
    <label>Load Shedding Programming Utility Rebate</label>
    <type>Checkbox</type>
</CustomField>