force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/LocalMonitoringBas__c.field-meta.xml
<CustomField>
    <fullName>LocalMonitoringBas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox option for meter connectivity question</description>
    <inlineHelpText>Select the checkbox if the meters installed as part of this project building scope will be monitored through the local Building Automation System (BAS) system.</inlineHelpText>
    <label>Local Monitoring - BAS</label>
    <type>Checkbox</type>
</CustomField>