force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/LowerEnergyCostSuppliers__c.field-meta.xml
<CustomField>
    <fullName>LowerEnergyCostSuppliers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Lower Energy Cost Suppliers</description>
    <inlineHelpText>Select the checkbox if the building energy will be supplied by a lower cost utility provider as part of this project.</inlineHelpText>
    <label>Lower Cost Energy Provider</label>
    <type>Checkbox</type>
</CustomField>