force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/LowNoWaterLandscaping__c.field-meta.xml
<CustomField>
    <fullName>LowNoWaterLandscaping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Low or No Water Landscaping</description>
    <inlineHelpText>Select the checkbox if the building&apos;s landscaping is low or no water landscaping.</inlineHelpText>
    <label>Low or No Water Landscaping</label>
    <type>Checkbox</type>
</CustomField>