force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/MicroturbinesInstld__c.field-meta.xml
<CustomField>
    <fullName>MicroturbinesInstld__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox if microturbines were installed as part of the project building scope. A microturbine is a gas turbine, also called a combustion turbine, is a rotary engine that extracts energy from a flow of combustion gas.</description>
    <inlineHelpText>Select the checkbox if microturbines were installed as part of the project building scope. A microturbine is a gas turbine, also called a combustion turbine, is a rotary engine that extracts energy from a flow of combustion gas.</inlineHelpText>
    <label>Microturbines</label>
    <type>Checkbox</type>
</CustomField>