force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/Mmbtuperwell__c.field-meta.xml
<CustomField>
    <fullName>Mmbtuperwell__c</fullName>
    <description>MMBTUPerWell</description>
    <inlineHelpText>Enter the average MMBtu per well.</inlineHelpText>
    <label>Average MMBtu Per Well (MMBtu)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>