force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ModifiedReason__c.field-meta.xml
<CustomField>
    <fullName>ModifiedReason__c</fullName>
    <description>The page that was updated most recently.</description>
    <inlineHelpText>The page that was updated most recently.</inlineHelpText>
    <label>Last Updated Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>