force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ModifyEqpClosedLoopSys__c.field-meta.xml
<CustomField>
    <fullName>ModifyEqpClosedLoopSys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Modify of equipment to a closed loop system</description>
    <inlineHelpText>Select the checkbox to indicate if equipment was modified to a closed loop system.</inlineHelpText>
    <label>Modify equipment to a closed loop system</label>
    <type>Checkbox</type>
</CustomField>