force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/MotorRplcs__c.field-meta.xml
<CustomField>
    <fullName>MotorRplcs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Motor Replacements</description>
    <inlineHelpText>Indicates if Motor Replacements are part of air handler repair or alterations.</inlineHelpText>
    <label>Motor Replacements</label>
    <type>Checkbox</type>
</CustomField>