force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NarrTbd__c.field-meta.xml
<CustomField>
    <fullName>NarrTbd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are any items TBD?</description>
    <inlineHelpText>If any of the above information is yet to be determined, please check &quot;TBD&quot;.</inlineHelpText>
    <label>Information To Be Determined (TBD)</label>
    <type>Checkbox</type>
</CustomField>