force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NarrTbdText__c.field-meta.xml
<CustomField>
    <fullName>NarrTbdText__c</fullName>
    <description>If any items are TBD, this is the reason why.</description>
    <inlineHelpText>If you have indicated any of the above information is yet to be determined (TBD), please explain why here.</inlineHelpText>
    <label>If TBD, Please Explain Why</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>