force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/NewDoubleSkinFacade__c.field-meta.xml
<CustomField>
    <fullName>NewDoubleSkinFacade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if New Double Skin Façade</description>
    <inlineHelpText>Select the checkbox if a double skin facade is included in the project building scope. A double skin facade consists of two glass skins placed in such a way that air flows in the intermediate cavity.</inlineHelpText>
    <label>New Double Skin Facade</label>
    <type>Checkbox</type>
</CustomField>